| Summary: | ASTERISK-26363: res_pjsip: Bye sent to sip trunk is not authenticated even after receiving a 407 error code | ||
| Reporter: | Yaacov Akiba Slama (yaslama) | Labels: | |
| Date Opened: | 2016-09-12 23:55:46 | Date Closed: | 2017-04-05 16:40:32 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.9.1 13.11.2 14.0.0-beta2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 8.x | Attachments: | |
| Description: | The configuration is:
{noformat} Phone/Softphone (P) <--> asterisk (A) <--> authenticated sip-trunk (ST) {noformat} When P hangs up, a BYE request is sent to A. A then sends a BYE request to ST, which returns a 407 because it needs authentication. But A doesn't send an answer to this 407, so ST thinks that the conversation is not hung. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-12 23:55:47.236-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-04-05 16:40:33.035-0500 Change 5380 merged by zuul: pjsip/basic_calls/outgoing/nominal/peer_in_dialog_auths: Include BYE. [https://gerrit.asterisk.org/5380|https://gerrit.asterisk.org/5380] By: Friendly Automation (friendly-automation) 2017-04-05 17:51:42.853-0500 Change 5377 merged by Joshua Colp: res_pjsip_session: Allow BYE to be sent on disconnected session. [https://gerrit.asterisk.org/5377|https://gerrit.asterisk.org/5377] By: Friendly Automation (friendly-automation) 2017-04-05 19:05:39.627-0500 Change 5379 merged by zuul: res_pjsip_session: Allow BYE to be sent on disconnected session. [https://gerrit.asterisk.org/5379|https://gerrit.asterisk.org/5379] By: Friendly Automation (friendly-automation) 2017-04-05 19:09:23.835-0500 Change 5378 merged by Joshua Colp: res_pjsip_session: Allow BYE to be sent on disconnected session. [https://gerrit.asterisk.org/5378|https://gerrit.asterisk.org/5378] | ||