res_pjsip_session: Send request even if the state is disconnected

Sometimes the request _needs_ to be sent when
 inv_session->state == PJSIP_INV_STATE_DISCONNECTED
For instance, when a 407 is returned by the SIP trunk as an answer to a BYE
request. pjsip needs to send a second BYE request with the authentication
data. If it's not sent, the SIP trunk doesn't know that the conversation is
hung up.

ASTERISK-26363 #close

Change-Id: I7254684dc07bc739c10597f3bec92f470eace137